BJS2-57983 Анализ активности пользователей в социальной сети